--- a/ops/helm/values/logo-ui-prod.yaml
+++ b/ops/helm/values/logo-ui-prod.yaml
@@ -1,25 +1,25 @@
 image:
-    tag: ENC[AES256_GCM,data:NEbkUL+Q,iv:Q2xFDJVMKwWC3K6P9qpw1dTG1VwmCukFo86Dz1jrQGQ=,tag:dYli57Pbs6QSXFbG5gi0iA==,type:str]
-    repository: ENC[AES256_GCM,data:6YwxeUdIWxW33u/0peKp5Cdv/6q3vYrNX0HCzD0Hpptbk/Dmsss=,iv:MO4xfRJHVk0cAHOvdxJ90zHqI4kfaOoGRcj7af9w9jM=,tag:boi/bN8qMHMyljabXWtGFA==,type:str]
+    tag: ENC[AES256_GCM,data:YnFLcLCl,iv:gX1WnBQrMdownf7Kk0rJJYLZsX/O8x72uapQchZiauc=,tag:0qH9VyLETML8NwKjbSktAw==,type:str]
+    repository: ENC[AES256_GCM,data:JdbAOMjc2MW5hIJIU/G8QDnofZ4HE0LDV4AB5i0mIxoO0/NWNsg=,iv:8ZV1DH/fT/quaEMPRD2nHRWR8wTmcchWvh1PECJh7bU=,tag:OWaSCraUfeWXJd6H8j9EPA==,type:str]
 ingress:
-    enabled: ENC[AES256_GCM,data:/QU9hA==,iv:vRyuj8FD2arOo7EiOr+PLXWhEqZSZyYkCcWu+83V7r8=,tag:ZqIc064Z6KqXuiynHnifOw==,type:bool]
+    enabled: ENC[AES256_GCM,data:qayyCg==,iv:GQLKkfheczilhNKSCL1e5O8NxTrxVDd0dJKs1IG1Op4=,tag:HkE+nuUguqkQbQUC/o0Fmg==,type:bool]
     annotations:
-        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:nyeRW8ueHYr4x43UgadGFD6tZSQ=,iv:CYTnGRIK1QNsS+KiwziDhfSMMEjlOu7fOk+5yPTFEUE=,tag:Dwld0QWxGR5ABW0LxgwCLQ==,type:str]
-        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:jpEnH87sxkX7rAxl,iv:KoJ3O5k416U4Jv/9SJvt+2SyswXi9KlYzYBrbH2BONs=,tag:IBLe7p24BGQwxqdLU26e8w==,type:str]
-        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:osy2jg9MSLUurVZt,iv:geiouWmGrnHvYbf1C+I0S26VW6drSQdJaWkj6PRuX1w=,tag:GVe40cYu3orZHGXaWscJEw==,type:str]
-        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:9zrtR5Slsyfioq0csaKY/2sGzwc=,iv:suOqhhOucjV25XdYHfVnHbb8ntSeZThvzaxwwwADL9I=,tag:8Q6mAgR02zd41c6EismFlA==,type:str]
+        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:RcvZa3izjXQLL6zNpzkdIyS9Nkg=,iv:PXtYmONaI4kxsy01u/7/nOqrrzHaYPxsJ8WQQIbcmqA=,tag:c/4fKR4ZIOotBVb4DVv6QA==,type:str]
+        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:oIAo3V7N0vDrn1FB,iv:ANNYjXCmf4M0GK6kUgV2FJ3BWgI87k0EKobOTt/Llxc=,tag:4MiqLlV3gcZHS+8zIXSh4g==,type:str]
+        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:n6N0NHXNwCD40Cil,iv:vVbDmIRoTAJKvrjiEghhEbz4X/rWq/aM119LXhyHcg4=,tag:7VdHZ3w3U/iYaD39SsKGIw==,type:str]
+        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:khsY5DwZw8AUCI0+KmXoCOCJYUk=,iv:y96TAD6QtaWIRijPOL5XtiZX8hB528eQmT0NP11VecY=,tag:V8hdT4n9BFojGRUdyIlY+Q==,type:str]
     hosts:
-        - host: ENC[AES256_GCM,data:u0ac5KqW/gtG8cmeVeoV5yynzReb9xiGL2XcG6M=,iv:HM/pJWYjICsrMasGqLbPJuGfFICBaojDKfZfGwkPT+s=,tag:WZAVdBwx4UvvrNJdrnPjtw==,type:str]
+        - host: ENC[AES256_GCM,data:EuEIv8A1k5eC5sJ03MHte/aLKXMEL68pCuNDILo=,iv:HUDwxdZjzza5QUlytK535yV1tbE5lY32/daAmL0nTCw=,tag:b0Yb+bc5LCBKp1HQrCnXeg==,type:str]
           paths:
-            - path: ENC[AES256_GCM,data:LQ==,iv:yRdQpgYq43S97Ttx+IBgyAh1ZoU+qFA7ATAdajhVJdU=,tag:4SbgYEOOG8EBqUVaDKRwjg==,type:str]
-              pathType: ENC[AES256_GCM,data:rSe0Pdoy1KfIktcayo/zeKePztnJVA==,iv:g2jEiwTG1VGbcP0+Ik1HN/fwvG17Pk/jLtmVdL6fMLQ=,tag:2GP6NFsAS1MF+zI7i1x3lA==,type:str]
+            - path: ENC[AES256_GCM,data:dA==,iv:qn0fe1S3ehORNA0Jje2gIQ/RfC/TFFCq5XTEEyEwwt8=,tag:XRkRexe/EMHZFbd1omedyQ==,type:str]
+              pathType: ENC[AES256_GCM,data:DVh05+bZ04+tptz9tvXC63Y4X+aH1A==,iv:IsfbnuAVAxNShSJbt78/vnWJXeRVL/VxD0qoE4ZPKGo=,tag:Bt6djG5PpUG/DM1gB4QHhg==,type:str]
     tls:
         - hosts:
-            - ENC[AES256_GCM,data:k60asryYTZW0zT+RlqbgSJRDTCHA6M2z+e2kDWY=,iv:jgFiOdXO1ghFHavWpsCHEA4xeq22fABkekZyxSJLBfw=,tag:ZrfUfz8w94KtPI2Hpk/F0Q==,type:str]
-          secretName: ENC[AES256_GCM,data:EbC2rF6GXL/4zAt7/exQqZJq3vrX7GzKmdn6d0UpfrJkNdW/vgFX,iv:Pz7MNmWkrUzWcSDKXjoU/D+cm90+QfeSZbfH1SrydY4=,tag:cXePJRM8EQm0hcY4RSGHdA==,type:str]
+            - ENC[AES256_GCM,data:rjQds79PpYL6VEOc80I7GI2+/I9Jxzyp2EI6xok=,iv:TuamcdfmF1Qw4ACDlo/b3UE1y9l0sN2D+EzghbozVyw=,tag:85KQ/E3CUfy7vQG8tmHUaA==,type:str]
+          secretName: ENC[AES256_GCM,data:EWAPYwAFh3arMaMagY8vpgBazOf6RDkW0satRnR2lvIh19B+7Hve,iv:myMlhh0Jfc/FQX3bCV4o4nJCtA+vGtJtDcKmt2YShIM=,tag:H99iE6mmnhKoRGepgzh90g==,type:str]
 service:
-    type: ENC[AES256_GCM,data:HcAZ2pvIQ7w=,iv:gSUU6okCwStXiaUE4FZjamG4uAJSszjuHiC8v0b0TU4=,tag:Hs8L57j7KZWAWNnR8mSvkQ==,type:str]
-    nodePort: ENC[AES256_GCM,data:PRpswrk=,iv:U7ofEEaDRnce7rZxADiScblVoeXROcC87u1pNt4zEEA=,tag:tn3/gBXE+jxDrkLDX4uClg==,type:int]
+    type: ENC[AES256_GCM,data:/Z8LdYVYRis=,iv:SOyAvTeLJzZPlVOvuLiLnb2JOUjMdrQTndntP2JwQOE=,tag:1WLMXWuhNhPgZl+YtWf3YQ==,type:str]
+    nodePort: ENC[AES256_GCM,data:FHrydZk=,iv:YFIQCvLhCZLg/lIowi3pSRxNE8sIbhfRMap3t/IyXmM=,tag:1MD7ap3otyf0IeVDiGoVJg==,type:int]
 sops:
     kms: []
     gcp_kms: []
@@ -29,14 +29,14 @@ sops:
         - recipient: age1pj5elnqgt6c4yaatfpv652c8kcn4pwty2ez5l8y7e0rwh9e0gcpqkjj4xn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxbVludnc5Z1NPMGhyVFgz
-            aERMdGhzbkRXK0syeG94YU1xNEIyVzBneUNZCk5EVFk0WWxhYkVmSXQwU3ZhK0o1
-            UHJubXl1UXcrVzZ6ZUl5RGRxUXdFaWsKLS0tIEF3SkJTc3duR01kUC9vTlNyeHYr
-            SFFMZTd4RE13aFBobUlPcFlUUTRaYzgK2wzA4A5V8KishP8tdQ8lx3Al0PZMO7AW
-            Qna5YlistEwLeqQ8+AGDD2TthFHHD2CdwzFD4u9Wpzj2k7lnZ7fqjw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5SjZXdG5mV0pOTWVBSG1n
+            bHJBNDV2UHlXRlBwUm0yUVZrN2tzT2VhTXhFCmVPb3NSMmxvQXFuVjE1YkpmTVFY
+            V05EVEhkZzNOM1orQmFwenR0YlVQTEUKLS0tIHZBWGsyS0JVaGRsb094S2ZjVFNo
+            em1NWFhNYXR6bThXM3NDZTlObzc1dzgKUvdgJ5jesysuFwT7MqqcDsxwNbxD/XCi
+            IvCtkYafXr9pNswXRRyw86/OAF5B7P2YGVm5x21IMk+5rxRrsTqXDA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-05-03T21:56:13Z"
-    mac: ENC[AES256_GCM,data:BlH/XkZr+2j6yjzLiTMSF2QexsUbXHiDUJihA8fsNqBHooBx0Ujxa/4eaTyFQE/PV5wOpfVCmtTzhh1G2la4oZuOdbsi+py93M7MKcZpABz1K2Gy63dZl3T0rul31H0nxvA9RUmeul6mqsQBcP38qKuc/0/43GQ+aYmvu8OY2b0=,iv:c6VfX1m8UfC877H+qNmaXTFI1Bgbwp2AEM7AYSrNDoU=,tag:/r/fl6/xrlf75rqBowvdkg==,type:str]
+    lastmodified: "2023-05-09T06:32:30Z"
+    mac: ENC[AES256_GCM,data:ky/Y1m4DVt8MCo7g+4pxJvBb1FK+Qgd1dtUOrcy+1Ev3V5gY+E8EFOoj8gan59qkbfsGOMDzCV/JS28uCPSk+ncLLZ5kkke1FiyO5uYHoiWaPhJlcGWdMLmA3mGy6TqjtjSZMMMZcUDVTuLIluNqEjUpawT6qYSQAELgZZ1Jo/A=,iv:8UNXRb+eMHT2VFQldUitO+hmu9T/5QZa6B8pvk833CQ=,tag:kSipUGRNYAFBsEjH0kcmbw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
