--- a/backend/app/logo_worker/pytest.ini
+++ b/backend/app/logo_worker/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 filterwarnings =
     ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning
-    ignore:coroutine 'Connection.disconnect' was never awaited:RuntimeWarning
+    ignore:lib2to3 package is deprecated and may not be able to parse:PendingDeprecationWarning:
     ignore:pkg_resources is deprecated as an API:DeprecationWarning
     ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning:
