--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,7 +20,7 @@ backcall==0.2.0
 blinker==1.6.2
 botocore==1.27.59
 cachetools==5.3.0
-certifi==2022.12.7
+certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.4
@@ -49,7 +49,7 @@ GitPython==3.1.31
 google-auth==2.17.3
 google-auth-oauthlib==1.0.0
 grpcio==1.54.0
-hiredis==2.2.2
+hiredis==2.2.3
 huggingface-hub==0.14.1
 humanfriendly==10.0
 idna==3.4
@@ -59,7 +59,7 @@ imgaug==0.4.0
 importlib-metadata==6.6.0
 iniconfig==2.0.0
 invisible-watermark==0.1.5
-ipython==8.13.1
+ipython==8.13.2
 jedi==0.18.2
 Jinja2==3.1.2
 jmespath==1.0.1
@@ -67,7 +67,6 @@ jsonschema==4.17.3
 kiwisolver==1.4.4
 kornia==0.6.0
 lazy_loader==0.2
-# Editable install with no version control (logo-worker==0.20.0)
 Markdown==3.4.3
 markdown-it-py==2.2.0
 MarkupSafe==2.1.2
@@ -83,7 +82,7 @@ networkx==3.1
 numpy==1.23.1
 oauthlib==3.2.2
 omegaconf==2.1.1
-onnx==1.13.1
+onnx==1.14.0
 onnxruntime==1.14.1
 opencv-python==4.6.0.66
 openmim==0.3.7
@@ -101,7 +100,7 @@ psutil==5.9.5
 ptyprocess==0.7.0
 pudb==2019.2
 pure-eval==0.2.2
-pyarrow==11.0.0
+pyarrow==12.0.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pydantic==1.10.7
@@ -113,22 +112,23 @@ pyparsing==3.0.9
 pyre-extensions==0.0.23
 pyrsistent==0.19.3
 pytest==7.3.1
+pytest-asyncio==0.21.0
 python-dateutil==2.8.2
 python-jose==3.3.0
-python-keycloak==2.16.0
+python-keycloak==2.16.1
 pytorch-lightning==1.4.2
 pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
 PyWavelets==1.4.1
 PyYAML==5.4.1
 redis==4.5.4
-regex==2023.3.23
-requests==2.29.0
+regex==2023.5.5
+requests==2.30.0
 requests-oauthlib==1.3.1
 requests-toolbelt==0.10.1
 rich==13.3.5
 rsa==4.7.2
-s3transfer==0.6.0
+s3transfer==0.6.1
 scikit-image==0.20.0
 scipy==1.10.1
 shapely==2.0.1
@@ -139,9 +139,8 @@ streamlit==1.22.0
 sympy==1.11.1
 tabulate==0.9.0
 tenacity==8.2.2
-tensorboard==2.12.2
+tensorboard==2.13.0
 tensorboard-data-server==0.7.0
-tensorboard-plugin-wit==1.8.1
 test-tube==0.7.5
 tifffile==2023.4.12
 timm==0.6.13
@@ -167,7 +166,7 @@ urllib3==1.26.15
 urwid==2.1.2
 validators==0.20.0
 wcwidth==0.2.6
-Werkzeug==2.3.2
+Werkzeug==2.3.3
 wrapt==1.15.0
 xformers==0.0.16
 yarl==1.9.2
