--- a/ops/helm/values/logo-ui-prod.yaml
+++ b/ops/helm/values/logo-ui-prod.yaml
@@ -1,25 +1,25 @@
 image:
-    tag: ENC[AES256_GCM,data:YnFLcLCl,iv:gX1WnBQrMdownf7Kk0rJJYLZsX/O8x72uapQchZiauc=,tag:0qH9VyLETML8NwKjbSktAw==,type:str]
-    repository: ENC[AES256_GCM,data:JdbAOMjc2MW5hIJIU/G8QDnofZ4HE0LDV4AB5i0mIxoO0/NWNsg=,iv:8ZV1DH/fT/quaEMPRD2nHRWR8wTmcchWvh1PECJh7bU=,tag:OWaSCraUfeWXJd6H8j9EPA==,type:str]
+    tag: ENC[AES256_GCM,data:jtLgU2aF,iv:S6Ipu1IMMdJ8rWkR3pUWADa94iAnWod52Ra7WPudSPU=,tag:/vjBv5mPKxqrwAPlduOJFg==,type:str]
+    repository: ENC[AES256_GCM,data:pjzVFt1S41GXL01HBJWu/8jXg0KH/DB4BiUnsY++CnZgmWKz/W0=,iv:MoNfvOdRdnIXwgEUMQHHRp0h10tg1IhtP+zKTFH5mIA=,tag:jHdhV/yBk9HGQJIXpsK4UQ==,type:str]
 ingress:
-    enabled: ENC[AES256_GCM,data:qayyCg==,iv:GQLKkfheczilhNKSCL1e5O8NxTrxVDd0dJKs1IG1Op4=,tag:HkE+nuUguqkQbQUC/o0Fmg==,type:bool]
+    enabled: ENC[AES256_GCM,data:X82PxA==,iv:XbBLKMhBXBoQftJpWPpTf4pJNi74hpDr86R/X61yiEU=,tag:Q0C8anWP0bO0wF9S+89JZQ==,type:bool]
     annotations:
-        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:RcvZa3izjXQLL6zNpzkdIyS9Nkg=,iv:PXtYmONaI4kxsy01u/7/nOqrrzHaYPxsJ8WQQIbcmqA=,tag:c/4fKR4ZIOotBVb4DVv6QA==,type:str]
-        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:oIAo3V7N0vDrn1FB,iv:ANNYjXCmf4M0GK6kUgV2FJ3BWgI87k0EKobOTt/Llxc=,tag:4MiqLlV3gcZHS+8zIXSh4g==,type:str]
-        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:n6N0NHXNwCD40Cil,iv:vVbDmIRoTAJKvrjiEghhEbz4X/rWq/aM119LXhyHcg4=,tag:7VdHZ3w3U/iYaD39SsKGIw==,type:str]
-        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:khsY5DwZw8AUCI0+KmXoCOCJYUk=,iv:y96TAD6QtaWIRijPOL5XtiZX8hB528eQmT0NP11VecY=,tag:V8hdT4n9BFojGRUdyIlY+Q==,type:str]
+        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:6+17Pq4X7y+wWb+LfwGa3Q9AZrQ=,iv:SeJqDp9ocsljsPjKPJL2llxjS+QDTt2AGGonceasjDM=,tag:Ipa3eotxpVLl4aZcQfrXNg==,type:str]
+        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:am2ClVKelwDL+MQt,iv:uaX9PE53LR/edM17wJ8/HljOjWhBazzPkZ2+kuY7Stc=,tag:TnG6gg4fmGBsQvWs8UTGkA==,type:str]
+        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:8N9cMev/ZPxm0jK6,iv:4n8V88koZrzdQDWQ8kW6EX6TM/EAHqg6ms2WpKxfiOI=,tag:MHSZFrnyahvr+HZY1AoPLQ==,type:str]
+        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:8cInohrBVmrjgAEAV8WsKZ/BOhg=,iv:/a/F/K28TjAcQYcbUolslAXjodo236OFN/aZbKuyUss=,tag:5a6owVYlehMRlpwK2i8JfQ==,type:str]
     hosts:
-        - host: ENC[AES256_GCM,data:EuEIv8A1k5eC5sJ03MHte/aLKXMEL68pCuNDILo=,iv:HUDwxdZjzza5QUlytK535yV1tbE5lY32/daAmL0nTCw=,tag:b0Yb+bc5LCBKp1HQrCnXeg==,type:str]
+        - host: ENC[AES256_GCM,data:el/YByAh8DGJE0iwVRlfr4l3hNTOv4fto0UMfLE=,iv:14adO1mpbEO/8a7ALoBOW7WM4Qd1oY8McfTiddFVfIY=,tag:0TH5jCcXwsBUED6yHXwH7A==,type:str]
           paths:
-            - path: ENC[AES256_GCM,data:dA==,iv:qn0fe1S3ehORNA0Jje2gIQ/RfC/TFFCq5XTEEyEwwt8=,tag:XRkRexe/EMHZFbd1omedyQ==,type:str]
-              pathType: ENC[AES256_GCM,data:DVh05+bZ04+tptz9tvXC63Y4X+aH1A==,iv:IsfbnuAVAxNShSJbt78/vnWJXeRVL/VxD0qoE4ZPKGo=,tag:Bt6djG5PpUG/DM1gB4QHhg==,type:str]
+            - path: ENC[AES256_GCM,data:wA==,iv:rsDQOnoG4fPHElVHZwPOjzU3Viggn7lVFFwXw/Yw4fw=,tag:IqcociclvJq40bNafIAu6A==,type:str]
+              pathType: ENC[AES256_GCM,data:Kl6cTm4T671Lwg1WwL7pw0U4iW7TEQ==,iv:6I2h+9E1E3BqFteeTxv40g6NFneH0SjWI0f1fFplVl8=,tag:DbT6DbNoMO3oKeXJiSVPQg==,type:str]
     tls:
         - hosts:
-            - ENC[AES256_GCM,data:rjQds79PpYL6VEOc80I7GI2+/I9Jxzyp2EI6xok=,iv:TuamcdfmF1Qw4ACDlo/b3UE1y9l0sN2D+EzghbozVyw=,tag:85KQ/E3CUfy7vQG8tmHUaA==,type:str]
-          secretName: ENC[AES256_GCM,data:EWAPYwAFh3arMaMagY8vpgBazOf6RDkW0satRnR2lvIh19B+7Hve,iv:myMlhh0Jfc/FQX3bCV4o4nJCtA+vGtJtDcKmt2YShIM=,tag:H99iE6mmnhKoRGepgzh90g==,type:str]
+            - ENC[AES256_GCM,data:W8iikq0w8Mbe2RT9kv4LEGBvo4OflGwy703Xkco=,iv:Z60Thctj+EeSFXHA8xkkia2Nj8CC8YQEq7eD5ha1IEs=,tag:A5E3kWgCqdx6snMFItsiVQ==,type:str]
+          secretName: ENC[AES256_GCM,data:NE7utrfrUIMwvPyJ1Nd8vK9swCRTI7B9elx3AugkaKEoXP44MBJj,iv:H+mTuabA/ZuYrm7Iu0KEd05s/E9p3/6Y4p4RoSWprdc=,tag:dTD0WEIF583mJ4YvwhwyvQ==,type:str]
 service:
-    type: ENC[AES256_GCM,data:/Z8LdYVYRis=,iv:SOyAvTeLJzZPlVOvuLiLnb2JOUjMdrQTndntP2JwQOE=,tag:1WLMXWuhNhPgZl+YtWf3YQ==,type:str]
-    nodePort: ENC[AES256_GCM,data:FHrydZk=,iv:YFIQCvLhCZLg/lIowi3pSRxNE8sIbhfRMap3t/IyXmM=,tag:1MD7ap3otyf0IeVDiGoVJg==,type:int]
+    type: ENC[AES256_GCM,data:pWJtOtFFSeI=,iv:vtRhEknVV5b5V/qgGIXedlb2sbcD+g9/PzjREyeLFjM=,tag:wMAQH6Lh/baeFRPbvzRy7g==,type:str]
+    nodePort: ENC[AES256_GCM,data:j7h5T6g=,iv:NSeHYFiLJYrfjtLetcv64Umu3Y+ypo4W4dmpFcqd8BA=,tag:hBLip6cZXES5mgmZtUJVmA==,type:int]
 sops:
     kms: []
     gcp_kms: []
@@ -29,14 +29,14 @@ sops:
         - recipient: age1pj5elnqgt6c4yaatfpv652c8kcn4pwty2ez5l8y7e0rwh9e0gcpqkjj4xn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5SjZXdG5mV0pOTWVBSG1n
-            bHJBNDV2UHlXRlBwUm0yUVZrN2tzT2VhTXhFCmVPb3NSMmxvQXFuVjE1YkpmTVFY
-            V05EVEhkZzNOM1orQmFwenR0YlVQTEUKLS0tIHZBWGsyS0JVaGRsb094S2ZjVFNo
-            em1NWFhNYXR6bThXM3NDZTlObzc1dzgKUvdgJ5jesysuFwT7MqqcDsxwNbxD/XCi
-            IvCtkYafXr9pNswXRRyw86/OAF5B7P2YGVm5x21IMk+5rxRrsTqXDA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhaG9OZGgvMndHV2c4ci95
+            VHFjRG1MVXAwTWd5UWl4V1poTWM5QTI0NlMwClVEbW9nS1NDSmkzNU1RYktQaEpC
+            amk5Z3NRTlFHT2dFTERNWW5BOWViRWMKLS0tIHlPN253T0lJbmNHVElhM1RibkVs
+            NThjYlJ3ekN5VUtkSWRIYnlURzJpc0kKLhe2j+oISK+ED8HSCQS8i9sDpdIFlPHw
+            IGc7Q4QCPB6H2w10fMqg5U9BgJo7ZrEb/wqMzZBVUYPGinfJKARsIg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-05-09T06:32:30Z"
-    mac: ENC[AES256_GCM,data:ky/Y1m4DVt8MCo7g+4pxJvBb1FK+Qgd1dtUOrcy+1Ev3V5gY+E8EFOoj8gan59qkbfsGOMDzCV/JS28uCPSk+ncLLZ5kkke1FiyO5uYHoiWaPhJlcGWdMLmA3mGy6TqjtjSZMMMZcUDVTuLIluNqEjUpawT6qYSQAELgZZ1Jo/A=,iv:8UNXRb+eMHT2VFQldUitO+hmu9T/5QZa6B8pvk833CQ=,tag:kSipUGRNYAFBsEjH0kcmbw==,type:str]
+    lastmodified: "2023-05-09T12:18:21Z"
+    mac: ENC[AES256_GCM,data:/TfDElXh96tpuHy46ECpauY2Xjeb7HLuFSRxFC8VPU94Y8HJsbdT5cK5BnHO4ymEor5KIeO9IC//pRj3lKi6p9LABTLCSi8Uk7BMQ+OBAX1CwpSKyk249luM9P18I6/HJ9fQ6asBjUODmh3KeW2wggT77dPJ7rlyYBXbc+8k2ss=,iv:gjY65HTr2dOpLI+6LCrL281jsYrCAVcBdi3JAxnOqKA=,tag:7UDatSud1MPRKhThyoDqwg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
