--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.2.5",
     "@types/js-md5": "^0.7.0",
     "@types/node": "^18.11.18",
@@ -47,5 +49,10 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/react-slider": "^1.3.1",
     "typescript": "^4.9.4"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
   }
 }
