--- a/.github/workflows/test-ui.yml
+++ b/.github/workflows/test-ui.yml
@@ -15,6 +15,9 @@ on:
 jobs:
   test-api:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend
     permissions:
       contents: read
       packages: write
