--- a/.github/workflows/test-ui.yml
+++ b/.github/workflows/test-ui.yml
@@ -31,6 +31,7 @@ jobs:
         with:
           node-version: 19
           cache: yarn
+          cache-dependency-path: frontend/yarn.lock
 
       - name: Install Dependencies & Run Tests
         run: |
