Edit logos when unauthenticated; save lates logos to the localStorage

--- a/.github/workflows/test-ui.yml
+++ b/.github/workflows/test-ui.yml
@@ -36,4 +36,4 @@ jobs:
       - name: Install Dependencies & Run Tests
         run: |
           yarn install --frozen-lockfile
-          yarn test
+          yarn test --watchAll=false
