--- a/ops/helm/values/logo-ui-prod.yaml
+++ b/ops/helm/values/logo-ui-prod.yaml
@@ -1,25 +1,25 @@
 image:
-    tag: ENC[AES256_GCM,data:jtLgU2aF,iv:S6Ipu1IMMdJ8rWkR3pUWADa94iAnWod52Ra7WPudSPU=,tag:/vjBv5mPKxqrwAPlduOJFg==,type:str]
-    repository: ENC[AES256_GCM,data:pjzVFt1S41GXL01HBJWu/8jXg0KH/DB4BiUnsY++CnZgmWKz/W0=,iv:MoNfvOdRdnIXwgEUMQHHRp0h10tg1IhtP+zKTFH5mIA=,tag:jHdhV/yBk9HGQJIXpsK4UQ==,type:str]
+    tag: ENC[AES256_GCM,data:lFFbQx/s,iv:YH115PPN81x3dl5WtfET1nwYC2tv4f6V5lD6okY2asc=,tag:M0MGJt2pcNRU1RT2bnvnZA==,type:str]
+    repository: ENC[AES256_GCM,data:rtPB3cmgdp8+t2eI5o4GZHEAlqxWvxTISHI3qZHNP6CUHrGsmPQ=,iv:mzzIsDGLbnWGyNRryUsdR/R6uAIAgWbNXTlDx+jks5I=,tag:keYnO8CZW/ygnX5TxsLraQ==,type:str]
 ingress:
-    enabled: ENC[AES256_GCM,data:X82PxA==,iv:XbBLKMhBXBoQftJpWPpTf4pJNi74hpDr86R/X61yiEU=,tag:Q0C8anWP0bO0wF9S+89JZQ==,type:bool]
+    enabled: ENC[AES256_GCM,data:dyWhJQ==,iv:yMMvcSYa+Q8bfe6X9YhhSYSezwy0uYuTPZqw3DRS5qo=,tag:ZQxn+PELfKHKn9Fhb0FOCQ==,type:bool]
     annotations:
-        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:6+17Pq4X7y+wWb+LfwGa3Q9AZrQ=,iv:SeJqDp9ocsljsPjKPJL2llxjS+QDTt2AGGonceasjDM=,tag:Ipa3eotxpVLl4aZcQfrXNg==,type:str]
-        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:am2ClVKelwDL+MQt,iv:uaX9PE53LR/edM17wJ8/HljOjWhBazzPkZ2+kuY7Stc=,tag:TnG6gg4fmGBsQvWs8UTGkA==,type:str]
-        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:8N9cMev/ZPxm0jK6,iv:4n8V88koZrzdQDWQ8kW6EX6TM/EAHqg6ms2WpKxfiOI=,tag:MHSZFrnyahvr+HZY1AoPLQ==,type:str]
-        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:8cInohrBVmrjgAEAV8WsKZ/BOhg=,iv:/a/F/K28TjAcQYcbUolslAXjodo236OFN/aZbKuyUss=,tag:5a6owVYlehMRlpwK2i8JfQ==,type:str]
+        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:lZgxpzhl4NsD6pS9f+HJSVGJ/xo=,iv:JNyynf7Gg1jFVL7+R9YF2dNuXp5MqNFkPd3KUACWOuc=,tag:ryvCgaF2/cBQ+igbCsqhjA==,type:str]
+        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:DfMJnX7LIFZ/0dO9,iv:zLIIoIOGNSUd/StHym5pJ7jJOxKIz52n25dgcbiJ9Gk=,tag:n30lVDNwJW3C/I+PCNHlRA==,type:str]
+        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:KY6DslFJCBCy3iF2,iv:9zv19fBNE9Gn1RkcquEKPeSnNrjO60D09GyJwSmjHzY=,tag:3X/3Zou/Fd9cEmU6KmbLLw==,type:str]
+        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:mkLszRkE/Tj9cGcloUs/MGN7MiQ=,iv:gVPzERcaTSVVppWf31e9Qc+XYbHCBryr5MrJ0Z8CpgM=,tag:xxPdKv4pCO+8UW0nOJ34Uw==,type:str]
     hosts:
-        - host: ENC[AES256_GCM,data:el/YByAh8DGJE0iwVRlfr4l3hNTOv4fto0UMfLE=,iv:14adO1mpbEO/8a7ALoBOW7WM4Qd1oY8McfTiddFVfIY=,tag:0TH5jCcXwsBUED6yHXwH7A==,type:str]
+        - host: ENC[AES256_GCM,data:mtHTGzU7GY46WdK6X40Pff2l5SALVr/uEes1vvo=,iv:ZmD1NMRgzrN3LrzBm7FElOTMNKv5GN9ia0jJl12BP0Y=,tag:l7BYQGwY8bzzOeNNzcj6gw==,type:str]
           paths:
-            - path: ENC[AES256_GCM,data:wA==,iv:rsDQOnoG4fPHElVHZwPOjzU3Viggn7lVFFwXw/Yw4fw=,tag:IqcociclvJq40bNafIAu6A==,type:str]
-              pathType: ENC[AES256_GCM,data:Kl6cTm4T671Lwg1WwL7pw0U4iW7TEQ==,iv:6I2h+9E1E3BqFteeTxv40g6NFneH0SjWI0f1fFplVl8=,tag:DbT6DbNoMO3oKeXJiSVPQg==,type:str]
+            - path: ENC[AES256_GCM,data:yQ==,iv:aKaxKUJOjX1AXDZo2LnIEwQUERSWphkMZlvDHdDyY3Y=,tag:Z7VCJ3S2v1rZz3/lnNrH5g==,type:str]
+              pathType: ENC[AES256_GCM,data:9lOX/vvmbcxyanxxlD7+FrXtMMtKKA==,iv:XpV2YLMNnIlj+MzaTFT5tmovrHIwq6Pqiw3Hnl/jUb4=,tag:GdyKX/SLESV3C5JIF4sqoQ==,type:str]
     tls:
         - hosts:
-            - ENC[AES256_GCM,data:W8iikq0w8Mbe2RT9kv4LEGBvo4OflGwy703Xkco=,iv:Z60Thctj+EeSFXHA8xkkia2Nj8CC8YQEq7eD5ha1IEs=,tag:A5E3kWgCqdx6snMFItsiVQ==,type:str]
-          secretName: ENC[AES256_GCM,data:NE7utrfrUIMwvPyJ1Nd8vK9swCRTI7B9elx3AugkaKEoXP44MBJj,iv:H+mTuabA/ZuYrm7Iu0KEd05s/E9p3/6Y4p4RoSWprdc=,tag:dTD0WEIF583mJ4YvwhwyvQ==,type:str]
+            - ENC[AES256_GCM,data:WbAZBfqVJSob+plsXzcPiqehdDwue+xun8jJoRc=,iv:99fiFLMXcow1tX5tHuKnifTqcY6fiTNXva8q1LUD5ig=,tag:BxXjta1gUnEtGG2FzmFyKA==,type:str]
+          secretName: ENC[AES256_GCM,data:/YAvjJRFLKso7ZPM84bdoSiFsWtsBJYHuXfD/pyv7CGc8n4RGrw6,iv:Yzt3VWbnmgQc9uzVoEQjgGkQCJiH7907FHIrIx22l0Y=,tag:cRVrPnCzkRpVnabyYFniBg==,type:str]
 service:
-    type: ENC[AES256_GCM,data:pWJtOtFFSeI=,iv:vtRhEknVV5b5V/qgGIXedlb2sbcD+g9/PzjREyeLFjM=,tag:wMAQH6Lh/baeFRPbvzRy7g==,type:str]
-    nodePort: ENC[AES256_GCM,data:j7h5T6g=,iv:NSeHYFiLJYrfjtLetcv64Umu3Y+ypo4W4dmpFcqd8BA=,tag:hBLip6cZXES5mgmZtUJVmA==,type:int]
+    type: ENC[AES256_GCM,data:DiE4PNBvlEs=,iv:VfP099pO+JWFrgpqUMn1dq40+XoGy5FDIwso3pH+wL4=,tag:3awl5ipPYJTCPLqNEA6AVg==,type:str]
+    nodePort: ENC[AES256_GCM,data:Z3Trytg=,iv:zeIUvmejFieI6Cjfj9iGbMgm1nXlWuuQcann+OmsTTw=,tag:BlBDF9b+ER4bdXLOnx1lgA==,type:int]
 sops:
     kms: []
     gcp_kms: []
@@ -29,14 +29,14 @@ sops:
         - recipient: age1pj5elnqgt6c4yaatfpv652c8kcn4pwty2ez5l8y7e0rwh9e0gcpqkjj4xn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhaG9OZGgvMndHV2c4ci95
-            VHFjRG1MVXAwTWd5UWl4V1poTWM5QTI0NlMwClVEbW9nS1NDSmkzNU1RYktQaEpC
-            amk5Z3NRTlFHT2dFTERNWW5BOWViRWMKLS0tIHlPN253T0lJbmNHVElhM1RibkVs
-            NThjYlJ3ekN5VUtkSWRIYnlURzJpc0kKLhe2j+oISK+ED8HSCQS8i9sDpdIFlPHw
-            IGc7Q4QCPB6H2w10fMqg5U9BgJo7ZrEb/wqMzZBVUYPGinfJKARsIg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQVkRVU0M4elozOHZFaWhB
+            amwxMzRvMHVyc3I4ZCtFSU5wTmovbGhPYkU4ClZ4VnJpeUhCZXJ0WHRhNFM2eFI2
+            SWNwUzRqbXlHRTFQYnQyMS9qeit2aXMKLS0tIG5NdWFsNzBkbkN2NTZOWXNCVGY3
+            SVR1cHgwSGpLWTZJd2l6S1dxZitkak0K6t8gXPlH1G6cOR2g1EAG/lRi72S8zQc7
+            my9iM4ZJfo8Cd7OH5qCAUwx+mx8nI3uchx4DTaXKOS344jt6fllk7A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-05-09T12:18:21Z"
-    mac: ENC[AES256_GCM,data:/TfDElXh96tpuHy46ECpauY2Xjeb7HLuFSRxFC8VPU94Y8HJsbdT5cK5BnHO4ymEor5KIeO9IC//pRj3lKi6p9LABTLCSi8Uk7BMQ+OBAX1CwpSKyk249luM9P18I6/HJ9fQ6asBjUODmh3KeW2wggT77dPJ7rlyYBXbc+8k2ss=,iv:gjY65HTr2dOpLI+6LCrL281jsYrCAVcBdi3JAxnOqKA=,tag:7UDatSud1MPRKhThyoDqwg==,type:str]
+    lastmodified: "2023-05-10T22:41:10Z"
+    mac: ENC[AES256_GCM,data:yTw5OvzZGHXSGUvPa+VRyfG0RX9ATjZXctK+8PUd96aUo0zzF/6ROraN6kPyVWY3FH0RQvT5ymee1ijizOLlWG7HpgxrAjEB1d6OcmHQ0+8zMINc6rQqfjEOpwP2+nz3HgSaFQI0P4wK4Nvn/v1Nwt8NgKU+LuyXKS9jWTnefbU=,iv:/age281EFjvGDCAzi5hlydIGKKYSWYIYIkUTnqRzHnk=,tag:JuE9gIM7qkH0Yfv/tTTqWQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
