Up UI prod version

--- a/ops/helm/values/logo-ui-prod.yaml
+++ b/ops/helm/values/logo-ui-prod.yaml
@@ -1,25 +1,25 @@
 image:
-    tag: ENC[AES256_GCM,data:lFFbQx/s,iv:YH115PPN81x3dl5WtfET1nwYC2tv4f6V5lD6okY2asc=,tag:M0MGJt2pcNRU1RT2bnvnZA==,type:str]
-    repository: ENC[AES256_GCM,data:rtPB3cmgdp8+t2eI5o4GZHEAlqxWvxTISHI3qZHNP6CUHrGsmPQ=,iv:mzzIsDGLbnWGyNRryUsdR/R6uAIAgWbNXTlDx+jks5I=,tag:keYnO8CZW/ygnX5TxsLraQ==,type:str]
+    tag: ENC[AES256_GCM,data:ho0axtOw,iv:w0VBQLqTCIrrukx3T/5ym+xo6nsSCX2SHZmWSyQsKZM=,tag:GiQ8hvD1lZSM0JcCxhNMfw==,type:str]
+    repository: ENC[AES256_GCM,data:gp98pICXD+LFoG06gSOILXTSl9ejl4ULF6ij7I0rW0UOKrK2flQ=,iv:O4MWWtVp0/9DpvuZyQRcb3K7/Z6ZgUYpANjJ8WAyN4I=,tag:pe+TFpg2hZHUEyAYbEWc1A==,type:str]
 ingress:
-    enabled: ENC[AES256_GCM,data:dyWhJQ==,iv:yMMvcSYa+Q8bfe6X9YhhSYSezwy0uYuTPZqw3DRS5qo=,tag:ZQxn+PELfKHKn9Fhb0FOCQ==,type:bool]
+    enabled: ENC[AES256_GCM,data:9NMzKA==,iv:U/KLPXwXr+7XQ/epfnp5dO+t555K+LQ7d/NIMeG+EIU=,tag:5X3kgHHiS/lhxeYNvfjcYg==,type:bool]
     annotations:
-        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:lZgxpzhl4NsD6pS9f+HJSVGJ/xo=,iv:JNyynf7Gg1jFVL7+R9YF2dNuXp5MqNFkPd3KUACWOuc=,tag:ryvCgaF2/cBQ+igbCsqhjA==,type:str]
-        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:DfMJnX7LIFZ/0dO9,iv:zLIIoIOGNSUd/StHym5pJ7jJOxKIz52n25dgcbiJ9Gk=,tag:n30lVDNwJW3C/I+PCNHlRA==,type:str]
-        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:KY6DslFJCBCy3iF2,iv:9zv19fBNE9Gn1RkcquEKPeSnNrjO60D09GyJwSmjHzY=,tag:3X/3Zou/Fd9cEmU6KmbLLw==,type:str]
-        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:mkLszRkE/Tj9cGcloUs/MGN7MiQ=,iv:gVPzERcaTSVVppWf31e9Qc+XYbHCBryr5MrJ0Z8CpgM=,tag:xxPdKv4pCO+8UW0nOJ34Uw==,type:str]
+        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:i3WviIwGw5wvojFH5qfswPO/MEI=,iv:2egOC27+9UYT2BgNETWrG+JzWdqOFkuR6BA84M+SOSk=,tag:Ja3FKPGEBciSw0EvYI5QwA==,type:str]
+        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:MCxBFfqJygjc/H3s,iv:01SJH14MMb/ucYgl3LipXJpJ8WtosWSzNDJo+OoUm/s=,tag:xlsapWNxli46yJNrHzePpg==,type:str]
+        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:WnssmOd9DNe7zWB+,iv:V2fQyC8S+9HgJwG0jvahslgic8x6F0pDOC4ZAKf0RqA=,tag:dhWP4dQBxf5UOwzyKTbpnA==,type:str]
+        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:nf2CT543LpXj2HrzGWT1woFif0Q=,iv:9AHIOdzvAQnP/vyNthgbx28g4ehFtaU9XUqoCa50H0E=,tag:YKwoSl2pVt4CfSb7xlH0oQ==,type:str]
     hosts:
-        - host: ENC[AES256_GCM,data:mtHTGzU7GY46WdK6X40Pff2l5SALVr/uEes1vvo=,iv:ZmD1NMRgzrN3LrzBm7FElOTMNKv5GN9ia0jJl12BP0Y=,tag:l7BYQGwY8bzzOeNNzcj6gw==,type:str]
+        - host: ENC[AES256_GCM,data:gYCgoSnSptzHFbaPQe9YP0eR+2AwB0KPqSv+Opc=,iv:LhkAXYgIJD8Ma/QOqZWEDD11Gm02Y4Ar1AwK8yHZ5WY=,tag:N4ZfkeWlI5V4hGz95t0Qag==,type:str]
           paths:
-            - path: ENC[AES256_GCM,data:yQ==,iv:aKaxKUJOjX1AXDZo2LnIEwQUERSWphkMZlvDHdDyY3Y=,tag:Z7VCJ3S2v1rZz3/lnNrH5g==,type:str]
-              pathType: ENC[AES256_GCM,data:9lOX/vvmbcxyanxxlD7+FrXtMMtKKA==,iv:XpV2YLMNnIlj+MzaTFT5tmovrHIwq6Pqiw3Hnl/jUb4=,tag:GdyKX/SLESV3C5JIF4sqoQ==,type:str]
+            - path: ENC[AES256_GCM,data:pA==,iv:4wZfS5tudBlQCB2HZg4VNu+vY3XI3u7TQX9ajvkzEr8=,tag:87SKUxAlKvf4oPKlE9mBcg==,type:str]
+              pathType: ENC[AES256_GCM,data:3k4/PuVjBzEbNzD6n8DcE5I9MC/nvg==,iv:v5wdZvzBdK3R4rRO7CEy9LuaErwigYEoQJwvsmIM8wI=,tag:hs1IyiyQhMlfqJ0xx2iHRw==,type:str]
     tls:
         - hosts:
-            - ENC[AES256_GCM,data:WbAZBfqVJSob+plsXzcPiqehdDwue+xun8jJoRc=,iv:99fiFLMXcow1tX5tHuKnifTqcY6fiTNXva8q1LUD5ig=,tag:BxXjta1gUnEtGG2FzmFyKA==,type:str]
-          secretName: ENC[AES256_GCM,data:/YAvjJRFLKso7ZPM84bdoSiFsWtsBJYHuXfD/pyv7CGc8n4RGrw6,iv:Yzt3VWbnmgQc9uzVoEQjgGkQCJiH7907FHIrIx22l0Y=,tag:cRVrPnCzkRpVnabyYFniBg==,type:str]
+            - ENC[AES256_GCM,data:cP8/tcc6fKYNXk73IlxaxR8IgwTacfWcaNaVWNA=,iv:MDwyHFEzuPj0jBUYPvTTbAUXcjmzW36BQUXN2qN6b94=,tag:+LyhKgSXuVevRDLsCBRVjQ==,type:str]
+          secretName: ENC[AES256_GCM,data:zywyY0oh+uqGte9oqbbQgQToinyVXg8SPz8wpGn4gQPFQQ7hga/l,iv:vW6qtm09XhcnJVOJ5pkOxrnMtUY31RereHR2Yb24mx4=,tag:uKtrn7QHoNfL0bes+rkIQw==,type:str]
 service:
-    type: ENC[AES256_GCM,data:DiE4PNBvlEs=,iv:VfP099pO+JWFrgpqUMn1dq40+XoGy5FDIwso3pH+wL4=,tag:3awl5ipPYJTCPLqNEA6AVg==,type:str]
-    nodePort: ENC[AES256_GCM,data:Z3Trytg=,iv:zeIUvmejFieI6Cjfj9iGbMgm1nXlWuuQcann+OmsTTw=,tag:BlBDF9b+ER4bdXLOnx1lgA==,type:int]
+    type: ENC[AES256_GCM,data:n4qE4vbYyLA=,iv:nEXc171VjH1gr/DNOYA9GsbMgEfYjg4idl/CvrVndnU=,tag:ilTTlGJyv6NTyivA/yU/1w==,type:str]
+    nodePort: ENC[AES256_GCM,data:OVr6neQ=,iv:pEDQcSie1VO+UkWmYllCOqozeenukZkYfPhDu6yaF5k=,tag:JHkr/ydIRWgrpWyYfav+Tg==,type:int]
 sops:
     kms: []
     gcp_kms: []
@@ -29,14 +29,14 @@ sops:
         - recipient: age1pj5elnqgt6c4yaatfpv652c8kcn4pwty2ez5l8y7e0rwh9e0gcpqkjj4xn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQVkRVU0M4elozOHZFaWhB
-            amwxMzRvMHVyc3I4ZCtFSU5wTmovbGhPYkU4ClZ4VnJpeUhCZXJ0WHRhNFM2eFI2
-            SWNwUzRqbXlHRTFQYnQyMS9qeit2aXMKLS0tIG5NdWFsNzBkbkN2NTZOWXNCVGY3
-            SVR1cHgwSGpLWTZJd2l6S1dxZitkak0K6t8gXPlH1G6cOR2g1EAG/lRi72S8zQc7
-            my9iM4ZJfo8Cd7OH5qCAUwx+mx8nI3uchx4DTaXKOS344jt6fllk7A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsSXljUkVTRWJZNkZSWXR5
+            VjJKOHVRblRRMFBES1FJOVB4VlNzRjRnb0c4CmphTTZhdVVkL2dteWF1OFRsVTBO
+            K3NmeFI4WUJWSDR1WVY3RHFjT3FrL2sKLS0tIEZWTkdINS9OeVgyZTErczBVYWtY
+            Y2pyelM2YTVEYzlTaVF0S1ZpZ283UmcKB7XWdJV2ThIu/AT9kRZpOXsas1GC3OTW
+            OTeHTlyakGY3y5J06JfKlSWJeArFDr6fpQ34XJAGZRU7YsvYoeHOqw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-05-10T22:41:10Z"
-    mac: ENC[AES256_GCM,data:yTw5OvzZGHXSGUvPa+VRyfG0RX9ATjZXctK+8PUd96aUo0zzF/6ROraN6kPyVWY3FH0RQvT5ymee1ijizOLlWG7HpgxrAjEB1d6OcmHQ0+8zMINc6rQqfjEOpwP2+nz3HgSaFQI0P4wK4Nvn/v1Nwt8NgKU+LuyXKS9jWTnefbU=,iv:/age281EFjvGDCAzi5hlydIGKKYSWYIYIkUTnqRzHnk=,tag:JuE9gIM7qkH0Yfv/tTTqWQ==,type:str]
+    lastmodified: "2023-05-11T19:55:00Z"
+    mac: ENC[AES256_GCM,data:2YqkBHvLq6uulxw4EC+QyOGqniMi0195Em/QN1P3DrTkVxss3e2GWvQHGCJdurupX2c6ENj93DqFOMvapMopyuZ4BxmmX1lgMHuDJ+ODFRv2q8AByC3PqmjeivvFgMea9VWFKuPEyKSg7ugS7FZJjXsJPHaPHMRIMGbZdVGdt+M=,iv:VcfwOWXeoK71iy/AS6SsaRwAYA4ecmtaf512QMJQZyU=,tag:5XKnUraSa1glwEOzW/4AmA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
