UI fixes, enhancements and workarounds for chrome

--- a/ops/helm/values/logo-ui-prod.yaml
+++ b/ops/helm/values/logo-ui-prod.yaml
@@ -1,25 +1,25 @@
 image:
-    tag: ENC[AES256_GCM,data:ho0axtOw,iv:w0VBQLqTCIrrukx3T/5ym+xo6nsSCX2SHZmWSyQsKZM=,tag:GiQ8hvD1lZSM0JcCxhNMfw==,type:str]
-    repository: ENC[AES256_GCM,data:gp98pICXD+LFoG06gSOILXTSl9ejl4ULF6ij7I0rW0UOKrK2flQ=,iv:O4MWWtVp0/9DpvuZyQRcb3K7/Z6ZgUYpANjJ8WAyN4I=,tag:pe+TFpg2hZHUEyAYbEWc1A==,type:str]
+    tag: ENC[AES256_GCM,data:f4KzHtNS,iv:l88Dd7p4WfnIhLDMS3JTvxcxy3ZB+h+wDFGaEG7rD8w=,tag:Jnd6XGJ9Uy+Dzyfl/TNK+Q==,type:str]
+    repository: ENC[AES256_GCM,data:Dc4pJRRopurBkJjpV5wVlN+h1ymAX8V+iJubMAp6g2rZ4G7Q/3E=,iv:B4Zv0zUxUIH6+tViuBv8kCFeBChHct/sn6GgMdm9vdc=,tag:VPTEmOHBM17wapQADtCoYw==,type:str]
 ingress:
-    enabled: ENC[AES256_GCM,data:9NMzKA==,iv:U/KLPXwXr+7XQ/epfnp5dO+t555K+LQ7d/NIMeG+EIU=,tag:5X3kgHHiS/lhxeYNvfjcYg==,type:bool]
+    enabled: ENC[AES256_GCM,data:0qrcQg==,iv:Q1IToYk4d4chFA9Df/aGgfITIohjmsMxVUgrv6ki5e0=,tag:Eq3kqNZUOER1WDX9W1P0Wg==,type:bool]
     annotations:
-        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:i3WviIwGw5wvojFH5qfswPO/MEI=,iv:2egOC27+9UYT2BgNETWrG+JzWdqOFkuR6BA84M+SOSk=,tag:Ja3FKPGEBciSw0EvYI5QwA==,type:str]
-        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:MCxBFfqJygjc/H3s,iv:01SJH14MMb/ucYgl3LipXJpJ8WtosWSzNDJo+OoUm/s=,tag:xlsapWNxli46yJNrHzePpg==,type:str]
-        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:WnssmOd9DNe7zWB+,iv:V2fQyC8S+9HgJwG0jvahslgic8x6F0pDOC4ZAKf0RqA=,tag:dhWP4dQBxf5UOwzyKTbpnA==,type:str]
-        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:nf2CT543LpXj2HrzGWT1woFif0Q=,iv:9AHIOdzvAQnP/vyNthgbx28g4ehFtaU9XUqoCa50H0E=,tag:YKwoSl2pVt4CfSb7xlH0oQ==,type:str]
+        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:qwbsmp9tIZwl3cvm+Hd927pwaCE=,iv:KlREsKCaD7XoBjTx945SLcFczMkGOR57I4N8bFWwkcs=,tag:V/MiF5yJ4yh6r3xGWgTCHA==,type:str]
+        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:ye0OOhUtXTQ5KlOw,iv:Zn0Db2QS2835LirUjM+q6V3LkDpTh4RwvsJByFUo1hQ=,tag:lVj+NqCWtoCOUkDuKF6gUg==,type:str]
+        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:EdUuGLGLdNx3lbd/,iv:PwxDhnyxteLGN801+g6MjJq+YD/CeQzhrkMvpu4vAXY=,tag:I2HqC8YUNZ21wulo+8Fnrw==,type:str]
+        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:Ics+F80YOxPms23OxX9x/LD9zOs=,iv:zFKDaJbYaKmmyGFo3vXp84KylCxyZmxR+oa4318Wj00=,tag:x5D52+aso6k3PqqUqKePGQ==,type:str]
     hosts:
-        - host: ENC[AES256_GCM,data:gYCgoSnSptzHFbaPQe9YP0eR+2AwB0KPqSv+Opc=,iv:LhkAXYgIJD8Ma/QOqZWEDD11Gm02Y4Ar1AwK8yHZ5WY=,tag:N4ZfkeWlI5V4hGz95t0Qag==,type:str]
+        - host: ENC[AES256_GCM,data:SiWGFRiq6l5B9L0mAAVgcYvcBTC8H5C5OKDLBao=,iv:tQaRSeVgn6tsJkPtsAyKD2EH489JnvE3XTS3EYgV+os=,tag:P+jEPyjPs90mHPXi+Kf0bw==,type:str]
           paths:
-            - path: ENC[AES256_GCM,data:pA==,iv:4wZfS5tudBlQCB2HZg4VNu+vY3XI3u7TQX9ajvkzEr8=,tag:87SKUxAlKvf4oPKlE9mBcg==,type:str]
-              pathType: ENC[AES256_GCM,data:3k4/PuVjBzEbNzD6n8DcE5I9MC/nvg==,iv:v5wdZvzBdK3R4rRO7CEy9LuaErwigYEoQJwvsmIM8wI=,tag:hs1IyiyQhMlfqJ0xx2iHRw==,type:str]
+            - path: ENC[AES256_GCM,data:rA==,iv:VckfhIMZXX4fEzxhScdS5P4n74ncQiRFJ43UNXUDTTw=,tag:iOj2QT5m4q/rX0lTgutBKg==,type:str]
+              pathType: ENC[AES256_GCM,data:vfI5YotsNR2y6JyE6nP2GBIW1tgxSQ==,iv:7vA7+6Y0jOnGx6KWiFKSEgnD02NmvtbrpX0Qg1HDpsI=,tag:H/nfDDqse4GF71ge/fdU7A==,type:str]
     tls:
         - hosts:
-            - ENC[AES256_GCM,data:cP8/tcc6fKYNXk73IlxaxR8IgwTacfWcaNaVWNA=,iv:MDwyHFEzuPj0jBUYPvTTbAUXcjmzW36BQUXN2qN6b94=,tag:+LyhKgSXuVevRDLsCBRVjQ==,type:str]
-          secretName: ENC[AES256_GCM,data:zywyY0oh+uqGte9oqbbQgQToinyVXg8SPz8wpGn4gQPFQQ7hga/l,iv:vW6qtm09XhcnJVOJ5pkOxrnMtUY31RereHR2Yb24mx4=,tag:uKtrn7QHoNfL0bes+rkIQw==,type:str]
+            - ENC[AES256_GCM,data:mirZBPvv8tEXoctTUUkDeVq3wrunxZRTjsYgVSk=,iv:hHDXgLk9xUzYPZGaK6KdpiG+LByUG/7m+5nSpauqx64=,tag:jyWpzF61yMmHw5ckgbfbvw==,type:str]
+          secretName: ENC[AES256_GCM,data:RW0AV1aqXHLSZ1n9ojJPiOxMeZMtVhoTHu4B1eo9iCiocHFgrrZJ,iv:2H6FM5EarMm6KHb8FLmTbHl5Y+IV/yf88nCwvCP7irU=,tag:8YLh+tMK6QSvQO4M3H97Mg==,type:str]
 service:
-    type: ENC[AES256_GCM,data:n4qE4vbYyLA=,iv:nEXc171VjH1gr/DNOYA9GsbMgEfYjg4idl/CvrVndnU=,tag:ilTTlGJyv6NTyivA/yU/1w==,type:str]
-    nodePort: ENC[AES256_GCM,data:OVr6neQ=,iv:pEDQcSie1VO+UkWmYllCOqozeenukZkYfPhDu6yaF5k=,tag:JHkr/ydIRWgrpWyYfav+Tg==,type:int]
+    type: ENC[AES256_GCM,data:3XtfsgTkxRo=,iv:SXMKGG2bRMExV4BKNtRJCGyhUGXH9/9+sc1Pk2jBK20=,tag:KvsAjOwM8vyiV5/E39FrbQ==,type:str]
+    nodePort: ENC[AES256_GCM,data:TDs/WYg=,iv:aslWLyhvmSQsEGJNjBEoxSru4S3mJeDhd5KnVHTteIU=,tag:C4Z5CadJJC+r7pWyU8s54w==,type:int]
 sops:
     kms: []
     gcp_kms: []
@@ -29,14 +29,14 @@ sops:
         - recipient: age1pj5elnqgt6c4yaatfpv652c8kcn4pwty2ez5l8y7e0rwh9e0gcpqkjj4xn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsSXljUkVTRWJZNkZSWXR5
-            VjJKOHVRblRRMFBES1FJOVB4VlNzRjRnb0c4CmphTTZhdVVkL2dteWF1OFRsVTBO
-            K3NmeFI4WUJWSDR1WVY3RHFjT3FrL2sKLS0tIEZWTkdINS9OeVgyZTErczBVYWtY
-            Y2pyelM2YTVEYzlTaVF0S1ZpZ283UmcKB7XWdJV2ThIu/AT9kRZpOXsas1GC3OTW
-            OTeHTlyakGY3y5J06JfKlSWJeArFDr6fpQ34XJAGZRU7YsvYoeHOqw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBId3FYZXhQdTVrSWV4U0pH
+            K0YraDZWQlFVK3ViRDF4MVluc090ZmhCU25vCndRWTY0dmd1WGZTR3g1Wm5NVGZL
+            L1M1a1FjS1ZSMFNlVkNMQjE0T0o2MmcKLS0tIEVEL2dHZjdaeDBnRDg1YlAxWnla
+            dU9kSDlmb0tiYkMvR3UySTQ2ZGEvdEkKV1MUA+q1vCBbDPv8fRy4+LeRDGGh2gvV
+            b0DfWWJyVy7NwNWZLJKjcYcSZntsAskA213ViM4/FSUCJ02CDDcTxQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-05-11T19:55:00Z"
-    mac: ENC[AES256_GCM,data:2YqkBHvLq6uulxw4EC+QyOGqniMi0195Em/QN1P3DrTkVxss3e2GWvQHGCJdurupX2c6ENj93DqFOMvapMopyuZ4BxmmX1lgMHuDJ+ODFRv2q8AByC3PqmjeivvFgMea9VWFKuPEyKSg7ugS7FZJjXsJPHaPHMRIMGbZdVGdt+M=,iv:VcfwOWXeoK71iy/AS6SsaRwAYA4ecmtaf512QMJQZyU=,tag:5XKnUraSa1glwEOzW/4AmA==,type:str]
+    lastmodified: "2023-05-11T21:30:56Z"
+    mac: ENC[AES256_GCM,data:tqbX80qFIXATjm2OfBgCwo95O8EiirIZsuFqSnc38qqdzpGge4KzwATjJbKnYOIp93jn7DrdPdxE15LyY9eOCDtVIst9DtYkYjENFBJptQWG/+WHtkO2u5gFV220g0uQJffbyDnKh1SeJFCSVk1BdlTT3fWUqc/s62PfD8UrtgY=,iv:hulVFYtSTA59FiW8i6Tv3nalauN1QsH5PRj/O/dCFj8=,tag:Eubao17MTyMUK63GonAJPQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
