Generalize fancy buttons and introduce PushButtons; fix 403 error handling in BE and FE; ask before close if there are unsaved changes; minor UI enhancements

--- a/ops/helm/values/logo-ui-prod.yaml
+++ b/ops/helm/values/logo-ui-prod.yaml
@@ -1,25 +1,25 @@
 image:
-    tag: ENC[AES256_GCM,data:f4KzHtNS,iv:l88Dd7p4WfnIhLDMS3JTvxcxy3ZB+h+wDFGaEG7rD8w=,tag:Jnd6XGJ9Uy+Dzyfl/TNK+Q==,type:str]
-    repository: ENC[AES256_GCM,data:Dc4pJRRopurBkJjpV5wVlN+h1ymAX8V+iJubMAp6g2rZ4G7Q/3E=,iv:B4Zv0zUxUIH6+tViuBv8kCFeBChHct/sn6GgMdm9vdc=,tag:VPTEmOHBM17wapQADtCoYw==,type:str]
+    tag: ENC[AES256_GCM,data:7f9vKGAe,iv:Nvb/qrjDLYuQFSYsWDI/efX60u/dVONvRDC3n4PuEjA=,tag:yphLiw7GQT3o3FB4qlp0/Q==,type:str]
+    repository: ENC[AES256_GCM,data:eZGrBv7SE0b3YgODtrAnol3wefBZjRr8MuG1/CzTPaQUui6/2FY=,iv:a5dMECsK2AwsgokRnRggWODge2eF5Bg07QBIn37XGLI=,tag:Ym4l1JpDHaKHQziiuyI5bA==,type:str]
 ingress:
-    enabled: ENC[AES256_GCM,data:0qrcQg==,iv:Q1IToYk4d4chFA9Df/aGgfITIohjmsMxVUgrv6ki5e0=,tag:Eq3kqNZUOER1WDX9W1P0Wg==,type:bool]
+    enabled: ENC[AES256_GCM,data:7LuEng==,iv:6O0b5sP713m8253HY5uw75NQmrzNSYuMRxmZYJGUQB8=,tag:WyEfI7IkzKAO9hWIFoL0Aw==,type:bool]
     annotations:
-        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:qwbsmp9tIZwl3cvm+Hd927pwaCE=,iv:KlREsKCaD7XoBjTx945SLcFczMkGOR57I4N8bFWwkcs=,tag:V/MiF5yJ4yh6r3xGWgTCHA==,type:str]
-        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:ye0OOhUtXTQ5KlOw,iv:Zn0Db2QS2835LirUjM+q6V3LkDpTh4RwvsJByFUo1hQ=,tag:lVj+NqCWtoCOUkDuKF6gUg==,type:str]
-        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:EdUuGLGLdNx3lbd/,iv:PwxDhnyxteLGN801+g6MjJq+YD/CeQzhrkMvpu4vAXY=,tag:I2HqC8YUNZ21wulo+8Fnrw==,type:str]
-        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:Ics+F80YOxPms23OxX9x/LD9zOs=,iv:zFKDaJbYaKmmyGFo3vXp84KylCxyZmxR+oa4318Wj00=,tag:x5D52+aso6k3PqqUqKePGQ==,type:str]
+        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:dMErcVsTY1c4DXIjrzxdD0Crclg=,iv:zo+nOQ9Wp9oxCcwhdj9/Pg2xpML5Vl4GEazirng8+f8=,tag:+Q7hETVh8eotQI5FwEBnGQ==,type:str]
+        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:lOlbhQ9g3lMXs89T,iv:J2ogrPgl58c/GyTnz0M1e6FUv8+XESgpvSnnmFI9oBA=,tag:dsf8svwKmO0tp/H79WefuQ==,type:str]
+        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:uNS5eJLTgC2yca2K,iv:PQMgPEtwvq45e6qD6MueCFy56377SEMWnpiVXXBZ8YA=,tag:AOkcuJxa3Sx/uhDMvpfFtg==,type:str]
+        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:dLNeKx3LMTvHMphAtN6NJlph1C0=,iv:wIf/ZL0n/2maNI81SOQpuIp9XJpPpoEJiK2/dTlzB6g=,tag:rqVqBmUwaK2V7Pj2xgvEyw==,type:str]
     hosts:
-        - host: ENC[AES256_GCM,data:SiWGFRiq6l5B9L0mAAVgcYvcBTC8H5C5OKDLBao=,iv:tQaRSeVgn6tsJkPtsAyKD2EH489JnvE3XTS3EYgV+os=,tag:P+jEPyjPs90mHPXi+Kf0bw==,type:str]
+        - host: ENC[AES256_GCM,data:GrEcbbLop0RGEYgrTedKGcZ3AcTS8YmeVv5+RpM=,iv:dxGkA3d4PNUvJ2dq3ZzZLZTJEBL7RQ3C5rRmwdISlk0=,tag:FzHLda89BLHAyFNcdgJYkA==,type:str]
           paths:
-            - path: ENC[AES256_GCM,data:rA==,iv:VckfhIMZXX4fEzxhScdS5P4n74ncQiRFJ43UNXUDTTw=,tag:iOj2QT5m4q/rX0lTgutBKg==,type:str]
-              pathType: ENC[AES256_GCM,data:vfI5YotsNR2y6JyE6nP2GBIW1tgxSQ==,iv:7vA7+6Y0jOnGx6KWiFKSEgnD02NmvtbrpX0Qg1HDpsI=,tag:H/nfDDqse4GF71ge/fdU7A==,type:str]
+            - path: ENC[AES256_GCM,data:SQ==,iv:uDgGrwJIgvQcoSDPLQTm+sp5koxoLZUM9RF0fvnkmk4=,tag:reR17xKaFHSj8/E0Xuq4NQ==,type:str]
+              pathType: ENC[AES256_GCM,data:rqb+mf1wceZwCwEql/Ylje/I86zrLA==,iv:cmUyCAbPwBDdhFbpjwbNnZ6fbJwtu8HytTP8JbpR4Ak=,tag:rj7DGIoqu8cVDYpvIlMyYA==,type:str]
     tls:
         - hosts:
-            - ENC[AES256_GCM,data:mirZBPvv8tEXoctTUUkDeVq3wrunxZRTjsYgVSk=,iv:hHDXgLk9xUzYPZGaK6KdpiG+LByUG/7m+5nSpauqx64=,tag:jyWpzF61yMmHw5ckgbfbvw==,type:str]
-          secretName: ENC[AES256_GCM,data:RW0AV1aqXHLSZ1n9ojJPiOxMeZMtVhoTHu4B1eo9iCiocHFgrrZJ,iv:2H6FM5EarMm6KHb8FLmTbHl5Y+IV/yf88nCwvCP7irU=,tag:8YLh+tMK6QSvQO4M3H97Mg==,type:str]
+            - ENC[AES256_GCM,data:FittMFoTwrGFVud67aB11qgOPIz9Y565m/1iwns=,iv:4Tmzsf1NQ85KRdyWuhS5f5CCi/XfSRSd3RG9utIGnuU=,tag:doKe5Zyre7bkBJNsf6TSKg==,type:str]
+          secretName: ENC[AES256_GCM,data:I8kWKns2+iloQ5ZCXq02g9zY5MdPtwtcMyK1/IUp/Ur6ziNi0NWa,iv:ilLuWRODvLRrNTdgXV+FJ2VEeVQJtkju+Oh/687m03I=,tag:VI78aXa8UvOBxIMtTdLZVA==,type:str]
 service:
-    type: ENC[AES256_GCM,data:3XtfsgTkxRo=,iv:SXMKGG2bRMExV4BKNtRJCGyhUGXH9/9+sc1Pk2jBK20=,tag:KvsAjOwM8vyiV5/E39FrbQ==,type:str]
-    nodePort: ENC[AES256_GCM,data:TDs/WYg=,iv:aslWLyhvmSQsEGJNjBEoxSru4S3mJeDhd5KnVHTteIU=,tag:C4Z5CadJJC+r7pWyU8s54w==,type:int]
+    type: ENC[AES256_GCM,data:UNkE7/5kacU=,iv:0xRyZtLzMNF7ZebDZ1Dc4RGXbPPH3yh9Z0d+AqYe2Wo=,tag:Ae7V+FZncLZZBezO7DbMsw==,type:str]
+    nodePort: ENC[AES256_GCM,data:A5jIdSI=,iv:TggCtAYdCdQK5UoRTEN3RRehYw1gvbeZ57q2qEpTzTQ=,tag:aAjgY6/2n9SwZTr3fH7B/Q==,type:int]
 sops:
     kms: []
     gcp_kms: []
@@ -29,14 +29,14 @@ sops:
         - recipient: age1pj5elnqgt6c4yaatfpv652c8kcn4pwty2ez5l8y7e0rwh9e0gcpqkjj4xn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBId3FYZXhQdTVrSWV4U0pH
-            K0YraDZWQlFVK3ViRDF4MVluc090ZmhCU25vCndRWTY0dmd1WGZTR3g1Wm5NVGZL
-            L1M1a1FjS1ZSMFNlVkNMQjE0T0o2MmcKLS0tIEVEL2dHZjdaeDBnRDg1YlAxWnla
-            dU9kSDlmb0tiYkMvR3UySTQ2ZGEvdEkKV1MUA+q1vCBbDPv8fRy4+LeRDGGh2gvV
-            b0DfWWJyVy7NwNWZLJKjcYcSZntsAskA213ViM4/FSUCJ02CDDcTxQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYSkJIbFdvUjZ1d08xRTJG
+            NzlJM1djZ04veVBSaWp4N05DZDY1TWJzSlFVCm1vRmsvWGwvVVdVbHdqT0VIb2tI
+            b0FSR1Q2eEdhdEhmVzh6Y0lqV3JSakUKLS0tIFlmMi9GU0JTbU5XVHJmVXdzV0Y1
+            RG1TaG54cGNXUUVrNjJNbzZua202T0UKZDxcVbHs8svhCKuI/1PZsGWIRo32HuJV
+            rsPmEliyxLskqS6LgB9rhykD6/aroTzmHThwFiYRDR7UrPF7RtBR2g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-05-11T21:30:56Z"
-    mac: ENC[AES256_GCM,data:tqbX80qFIXATjm2OfBgCwo95O8EiirIZsuFqSnc38qqdzpGge4KzwATjJbKnYOIp93jn7DrdPdxE15LyY9eOCDtVIst9DtYkYjENFBJptQWG/+WHtkO2u5gFV220g0uQJffbyDnKh1SeJFCSVk1BdlTT3fWUqc/s62PfD8UrtgY=,iv:hulVFYtSTA59FiW8i6Tv3nalauN1QsH5PRj/O/dCFj8=,tag:Eubao17MTyMUK63GonAJPQ==,type:str]
+    lastmodified: "2023-05-16T21:21:22Z"
+    mac: ENC[AES256_GCM,data:vJ3vWPEdLvpaMSjqjLQovf2UmJBRuWi3nyGEVOuplq/r3JtVd4AxJD9PmJwAUKxkUPOrT+/Us7y6BVLl2lmzRYPO77y4eFMhUvGGXlt8FCqW+fv7gkzLhCz7KvkVl7w5Yrn5TtVP0pPAlfOaFGtSAOlr/bT2/8qwE63qV2F73yI=,iv:Y/2uS/NREzwf15UVoDLtoEj+f5RzBymtvoIzis4Xac8=,tag:lummLdZrIG7OMCtK1d3/EQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
